--- a/assets/style/partials/_header.scss
+++ b/assets/style/partials/_header.scss
@@ -64,7 +64,7 @@
             width: 25rem;
             height: 100%;
             padding: 0;
-            background-image: url(../img/logo_dark.svg);
+            background-image: url(../../img/logo_dark.svg);
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
