--- a/assets/style/partials/_carousel.scss
+++ b/assets/style/partials/_carousel.scss
@@ -35,7 +35,7 @@
             opacity: .95;
         }
         #image1{
-            background-image: url(../img/Carousel/img1.jpg);
+            background-image: url(../../img/Carousel/img1.jpg);
             -webkit-transform: rotateY(0deg) translateZ(90rem);
             -moz-transform: rotateY(0deg) translateZ(90rem);
             -ms-transform: rotateY(0deg) translateZ(90rem);
@@ -43,7 +43,7 @@
             transform: rotateY(0deg) translateZ(90rem);
         }
         #image2{
-            background-image: url(../img/Carousel/img2.jpg);
+            background-image: url(../../img/Carousel/img2.jpg);
             -webkit-transform: rotateY(45deg) translateZ(90rem);
             -moz-transform: rotateY(45deg) translateZ(90rem);
             -ms-transform: rotateY(45deg) translateZ(90rem);
@@ -51,7 +51,7 @@
             transform: rotateY(45deg) translateZ(90rem);
         }
         #image3{
-            background-image: url(../img/Carousel/img3.jpg);
+            background-image: url(../../img/Carousel/img3.jpg);
             -webkit-transform: rotateY(90deg) translateZ(90rem);
             -moz-transform: rotateY(90deg) translateZ(90rem);
             -ms-transform: rotateY(90deg) translateZ(90rem);
@@ -59,7 +59,7 @@
             transform: rotateY(90deg) translateZ(90rem);
         }
         #image4{
-            background-image: url(../img/Carousel/img4.jpg);
+            background-image: url(../../img/Carousel/img4.jpg);
             -webkit-transform: rotateY(135deg) translateZ(90rem);
             -moz-transform: rotateY(135deg) translateZ(90rem);
             -ms-transform: rotateY(135deg) translateZ(90rem);
@@ -67,7 +67,7 @@
             transform: rotateY(135deg) translateZ(90rem);
         }
         #image5{
-            background-image: url(../img/Carousel/img5.jpg);
+            background-image: url(../../img/Carousel/img5.jpg);
             -webkit-transform: rotateY(180deg) translateZ(90rem);
             -moz-transform: rotateY(180deg) translateZ(90rem);
             -ms-transform: rotateY(180deg) translateZ(90rem);
@@ -75,7 +75,7 @@
             transform: rotateY(180deg) translateZ(90rem);
         }
         #image6{
-            background-image: url(../img/Carousel/img6.jpg);
+            background-image: url(../../img/Carousel/img6.jpg);
             -webkit-transform: rotateY(225deg) translateZ(90rem);
             -moz-transform: rotateY(225deg) translateZ(90rem);
             -ms-transform: rotateY(225deg) translateZ(90rem);
@@ -83,7 +83,7 @@
             transform: rotateY(225deg) translateZ(90rem);
         }
         #image7{
-            background-image: url(../img/Carousel/img7.jpg);
+            background-image: url(../../img/Carousel/img7.jpg);
             -webkit-transform: rotateY(270deg) translateZ(90rem);
             -moz-transform: rotateY(270deg) translateZ(90rem);
             -ms-transform: rotateY(270deg) translateZ(90rem);
@@ -91,7 +91,7 @@
             transform: rotateY(270deg) translateZ(90rem);
         }
         #image8{
-            background-image: url(../img/Carousel/img8.jpg);
+            background-image: url(../../img/Carousel/img8.jpg);
             -webkit-transform: rotateY(315deg) translateZ(90rem);
             -moz-transform: rotateY(315deg) translateZ(90rem);
             -ms-transform: rotateY(315deg) translateZ(90rem);
