Added smooth scroll effect on home page

--- a/assets/style/home_page/main.scss
+++ b/assets/style/home_page/main.scss
@@ -12,6 +12,7 @@ $fontColor: rgba(171, 145, 120, 1);
         text-decoration: none;
         color: $fontColor;
         font-size: 1.6rem;
+        cursor: pointer;
     }
     h1{
         font-size: 4rem;
