--- a/assets/style/home_page/main.css
+++ b/assets/style/home_page/main.css
@@ -7,7 +7,8 @@
     font-family: "Raleway", sans-serif;
     text-decoration: none;
     color: #ab9178;
-    font-size: 1.6rem; }
+    font-size: 1.6rem;
+    cursor: pointer; }
   * h1 {
     font-size: 4rem; }
   * h2 {
