--- a/assets/style/blog_page/blog_main.scss
+++ b/assets/style/blog_page/blog_main.scss
@@ -7,6 +7,7 @@ $fontColor: rgba(171, 145, 120, 1);
 *{
     font-size: 62.5%;
     color: $fontColor;
+    font-family: $mainFont;
     a{
         font-family: $mainFont;
         text-decoration: none;
