--- a/assets/style/contact_page/contact_main.css
+++ b/assets/style/contact_page/contact_main.css
@@ -104,6 +104,16 @@ body {
         margin: 0 auto; }
       body .main-wrapper .contact-welcome-wrapper .contact-welcome-msg h2 {
         font-weight: 400; }
+      body .main-wrapper .contact-welcome-wrapper .contact-welcome-msg .contact-info {
+        display: flex;
+        flex-direction: column; }
+        body .main-wrapper .contact-welcome-wrapper .contact-welcome-msg .contact-info a {
+          font-size: 3rem;
+          margin: 1rem; }
+          body .main-wrapper .contact-welcome-wrapper .contact-welcome-msg .contact-info a span {
+            margin: 0 1rem;
+            font-size: 2rem;
+            font-weight: 500; }
     body .main-wrapper .contact-welcome-wrapper .contact-welcome-pic {
       width: 50%;
       height: 60rem;
@@ -128,5 +138,190 @@ body {
       background: -moz-linear-gradient(180deg, #333333 0%, rgba(51, 51, 51, 0.2) 30%, rgba(51, 51, 51, 0.2) 70%, #333333 100%);
       background: -webkit-linear-gradient(180deg, #333333 0%, rgba(51, 51, 51, 0.2) 30%, rgba(51, 51, 51, 0.2) 70%, #333333 100%);
       background: linear-gradient(180deg, #333333 0%, rgba(51, 51, 51, 0.2) 30%, rgba(51, 51, 51, 0.2) 70%, #333333 100%); }
+  body .main-wrapper .contact-social-wrapper {
+    width: 100%; }
+    body .main-wrapper .contact-social-wrapper h2 {
+      text-align: center;
+      text-transform: uppercase; }
+    body .main-wrapper .contact-social-wrapper .social-network a {
+      margin: 0 1rem;
+      font-size: 5rem; }
+  body .main-wrapper .map-wrapper {
+    width: 100%; }
+    body .main-wrapper .map-wrapper h2 {
+      text-align: center;
+      text-transform: uppercase; }
+    body .main-wrapper .map-wrapper #map {
+      max-width: 100%;
+      width: 80%;
+      height: 40rem;
+      margin: 0 auto; }
+  body footer {
+    height: 20rem;
+    width: 100%;
+    background-color: #333333;
+    padding: 5rem 0; }
+    body footer .footer-info {
+      width: 100%;
+      margin: 0 auto;
+      font-size: 3rem;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+      body footer .footer-info address {
+        font-style: normal;
+        margin: 0;
+        width: 33%;
+        text-align: right; }
+      body footer .footer-info .footer-logo {
+        background-image: url(../../img/logo.svg);
+        width: 34%;
+        height: 7rem;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        margin: 0; }
+      body footer .footer-info .footer-contact-info {
+        font-size: 3rem;
+        margin: 0;
+        width: 33%; }
+    body footer #footer-social-network {
+      width: 50%;
+      margin: 2rem auto;
+      text-align: center; }
+      body footer #footer-social-network a {
+        margin: 0 2rem;
+        font-size: 3rem; }
+
+@keyframes carousel-animation {
+  0% {
+    -webkit-transform: translateZ(-90rem) rotate3d(0, 1, 0, 0deg);
+    -moz-transform: translateZ(-90rem) rotate3d(0, 1, 0, 0deg);
+    -ms-transform: translateZ(-90rem) rotate3d(0, 1, 0, 0deg);
+    -o-transform: translateZ(-90rem) rotate3d(0, 1, 0, 0deg);
+    transform: translateZ(-90rem) rotate3d(0, 1, 0, 0deg); }
+  12.5% {
+    -webkit-transform: translateZ(-90rem) rotate3d(0, 1, 0, 45deg);
+    -moz-transform: translateZ(-90rem) rotate3d(0, 1, 0, 45deg);
+    -ms-transform: translateZ(-90rem) rotate3d(0, 1, 0, 45deg);
+    -o-transform: translateZ(-90rem) rotate3d(0, 1, 0, 45deg);
+    transform: translateZ(-90rem) rotate3d(0, 1, 0, 45deg); }
+  25% {
+    -webkit-transform: translateZ(-90rem) rotate3d(0, 1, 0, 90deg);
+    -moz-transform: translateZ(-90rem) rotate3d(0, 1, 0, 90deg);
+    -ms-transform: translateZ(-90rem) rotate3d(0, 1, 0, 90deg);
+    -o-transform: translateZ(-90rem) rotate3d(0, 1, 0, 90deg);
+    transform: translateZ(-90rem) rotate3d(0, 1, 0, 90deg); }
+  37.5% {
+    -webkit-transform: translateZ(-90rem) rotate3d(0, 1, 0, 135deg);
+    -moz-transform: translateZ(-90rem) rotate3d(0, 1, 0, 135deg);
+    -ms-transform: translateZ(-90rem) rotate3d(0, 1, 0, 135deg);
+    -o-transform: translateZ(-90rem) rotate3d(0, 1, 0, 135deg);
+    transform: translateZ(-90rem) rotate3d(0, 1, 0, 135deg); }
+  50% {
+    -webkit-transform: translateZ(-90rem) rotate3d(0, 1, 0, 180deg);
+    -moz-transform: translateZ(-90rem) rotate3d(0, 1, 0, 180deg);
+    -ms-transform: translateZ(-90rem) rotate3d(0, 1, 0, 180deg);
+    -o-transform: translateZ(-90rem) rotate3d(0, 1, 0, 180deg);
+    transform: translateZ(-90rem) rotate3d(0, 1, 0, 180deg); }
+  62.5% {
+    -webkit-transform: translateZ(-90rem) rotate3d(0, 1, 0, 225deg);
+    -moz-transform: translateZ(-90rem) rotate3d(0, 1, 0, 225deg);
+    -ms-transform: translateZ(-90rem) rotate3d(0, 1, 0, 225deg);
+    -o-transform: translateZ(-90rem) rotate3d(0, 1, 0, 225deg);
+    transform: translateZ(-90rem) rotate3d(0, 1, 0, 225deg); }
+  75% {
+    -webkit-transform: translateZ(-90rem) rotate3d(0, 1, 0, 270deg);
+    -moz-transform: translateZ(-90rem) rotate3d(0, 1, 0, 270deg);
+    -ms-transform: translateZ(-90rem) rotate3d(0, 1, 0, 270deg);
+    -o-transform: translateZ(-90rem) rotate3d(0, 1, 0, 270deg);
+    transform: translateZ(-90rem) rotate3d(0, 1, 0, 270deg); }
+  87.5% {
+    -webkit-transform: translateZ(-90rem) rotate3d(0, 1, 0, 315deg);
+    -moz-transform: translateZ(-90rem) rotate3d(0, 1, 0, 315deg);
+    -ms-transform: translateZ(-90rem) rotate3d(0, 1, 0, 315deg);
+    -o-transform: translateZ(-90rem) rotate3d(0, 1, 0, 315deg);
+    transform: translateZ(-90rem) rotate3d(0, 1, 0, 315deg); }
+  100% {
+    -webkit-transform: translateZ(-90rem) rotate3d(0, 1, 0, 360deg);
+    -moz-transform: translateZ(-90rem) rotate3d(0, 1, 0, 360deg);
+    -ms-transform: translateZ(-90rem) rotate3d(0, 1, 0, 360deg);
+    -o-transform: translateZ(-90rem) rotate3d(0, 1, 0, 360deg);
+    transform: translateZ(-90rem) rotate3d(0, 1, 0, 360deg); } }
+@keyframes header-animation {
+  from {
+    height: 0rem;
+    opacity: 0; }
+  to {
+    height: 30rem;
+    opacity: 1; } }
+@keyframes sticky-header-animation {
+  0% {
+    height: 0;
+    opacity: 0; }
+  25% {
+    height: 4rem;
+    opacity: 0; }
+  50% {
+    height: 8rem;
+    opacity: 0; }
+  75% {
+    height: 13rem;
+    opacity: .5; }
+  100% {
+    height: 13rem;
+    opacity: 0.95; } }
+@keyframes line1-animation {
+  from {
+    -webkit-transform: rotateZ(45deg);
+    -moz-transform: rotateZ(45deg);
+    -ms-transform: rotateZ(45deg);
+    -o-transform: rotateZ(45deg);
+    transform: rotateZ(45deg); }
+  to {
+    -webkit-transform: rotateZ(0deg);
+    -moz-transform: rotateZ(0deg);
+    -ms-transform: rotateZ(0deg);
+    -o-transform: rotateZ(0deg);
+    transform: rotateZ(0deg); } }
+@keyframes line3-animation {
+  from {
+    -webkit-transform: rotateZ(-45deg);
+    -moz-transform: rotateZ(-45deg);
+    -ms-transform: rotateZ(-45deg);
+    -o-transform: rotateZ(-45deg);
+    transform: rotateZ(-45deg); }
+  to {
+    -webkit-transform: rotateZ(0deg);
+    -moz-transform: rotateZ(0deg);
+    -ms-transform: rotateZ(0deg);
+    -o-transform: rotateZ(0deg);
+    transform: rotateZ(0deg); } }
+@keyframes burger-line1-animation-active {
+  from {
+    -webkit-transform: rotateZ(0deg);
+    -moz-transform: rotateZ(0deg);
+    -ms-transform: rotateZ(0deg);
+    -o-transform: rotateZ(0deg);
+    transform: rotateZ(0deg); }
+  to {
+    -webkit-transform: rotateZ(45deg);
+    -moz-transform: rotateZ(45deg);
+    -ms-transform: rotateZ(45deg);
+    -o-transform: rotateZ(45deg);
+    transform: rotateZ(45deg); } }
+@keyframes burger-line3-animation-active {
+  from {
+    -webkit-transform: rotateZ(0deg);
+    -moz-transform: rotateZ(0deg);
+    -ms-transform: rotateZ(0deg);
+    -o-transform: rotateZ(0deg);
+    transform: rotateZ(0deg); }
+  to {
+    -webkit-transform: rotateZ(-45deg);
+    -moz-transform: rotateZ(-45deg);
+    -ms-transform: rotateZ(-45deg);
+    -o-transform: rotateZ(-45deg);
+    transform: rotateZ(-45deg); } }
 
 /*# sourceMappingURL=contact_main.css.map */
