--- a/assets/style/contact_page/contact_main.scss
+++ b/assets/style/contact_page/contact_main.scss
@@ -53,6 +53,19 @@ body{
                 h2{
                     font-weight: 400;
                 }
+                .contact-info{
+                    display: flex;
+                    flex-direction: column;
+                    a{
+                        font-size: 3rem;
+                        margin: 1rem;
+                        span{
+                            margin: 0 1rem;
+                            font-size: 2rem;
+                            font-weight: 500;
+                        }
+                    }
+                }
             }
             .contact-welcome-pic{
                 width: 50%;
@@ -83,5 +96,33 @@ body{
                 background: linear-gradient(180deg, rgba(51,51,51,1) 0%, rgba(51,51,51,0.2) 30%, rgba(51,51,51,0.2) 70%, rgba(51,51,51,1) 100%);
             }
         }
+        .contact-social-wrapper{
+            width: 100%;
+            h2{
+                text-align: center;
+                text-transform: uppercase;
+            }
+            .social-network{
+                a{
+                    margin: 0 1rem;
+                    font-size: 5rem;
+                }
+            }
+        }
+        .map-wrapper{
+            width: 100%;
+            h2{
+                text-align: center;
+                text-transform: uppercase;
+            }
+            #map{
+                max-width: 100%;
+                width: 80%;
+                height: 40rem;
+                margin: 0 auto;
+            }
+        }
     }
+    @import "../partials/footer";
 }
+@import "../partials/keyframes";
