--- a/assets/style/contact_page/contact_main.css
+++ b/assets/style/contact_page/contact_main.css
@@ -153,7 +153,7 @@ body {
       text-transform: uppercase; }
     body .main-wrapper .map-wrapper #map {
       max-width: 100%;
-      width: 80%;
+      width: 100rem;
       height: 40rem;
       margin: 0 auto; }
   body footer {
