--- a/assets/style/contact_page/contact_main.scss
+++ b/assets/style/contact_page/contact_main.scss
@@ -117,7 +117,7 @@ body{
             }
             #map{
                 max-width: 100%;
-                width: 80%;
+                width: 100rem;
                 height: 40rem;
                 margin: 0 auto;
             }
