Body width set to 1950px on very wide screens

--- a/assets/style/blog_page/blog_main.css
+++ b/assets/style/blog_page/blog_main.css
@@ -15,7 +15,9 @@
     font-size: 3rem; }
 
 body {
-  margin: 0;
+  width: 100%;
+  max-width: 1950px;
+  margin: 0 auto;
   padding: 0;
   box-sizing: border-box;
   background-color: #333333;
